bin/tests/snapshots/useless_parens__lint_f04dfa0b3c36c6f2489cba3b913db246cbacd0f646193435d7def64d8bbd9b10.snap
---
source: bin/tests/useless_parens.rs
expression: "\"let b = 0; in (b)\""
---
[W08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:15]
   │
 1 │ let b = 0; in (b)
   ·               ─┬─  
   ·                ╰─── Useless parentheses around body of let expression
───╯
